--- a/.github/workflows/WRT-TEST.yml
+++ b/.github/workflows/WRT-TEST.yml
@@ -20,6 +20,7 @@ on:
           - IPQ60XX-WIFI-NO
           - IPQ807X-WIFI-YES
           - IPQ807X-WIFI-NO
+          - W1701K
           - TEST
       SOURCE:
         default: 'immortalwrt/immortalwrt'
@@ -30,6 +31,7 @@ on:
           - immortalwrt/immortalwrt
           - LiBwrt/openwrt-6.x
           - qosmio/openwrt-ipq
+          - ZqinKing/wrt_release
       BRANCH:
         default: 'master'
         required: true
@@ -58,7 +60,7 @@ jobs:
       #默认主题
       WRT_THEME: aurora
       #默认主机名
-      WRT_NAME: OWRT
+      WRT_NAME: Breeze
       #默认WIFI名称
       WRT_SSID: OWRT
       #默认WIFI密码
